syntax = "proto3";

option csharp_namespace = "CanaRails.Protos";

package app;

service AppService {
  rpc CreateApp (CreateAppRequest) returns (CreateAppReply) {};
  rpc ListApp (ListAppRequest) returns (ListAppReply) {};
  rpc FindAppByID (FindAppByIDRequest) returns (FindAppByIDReply) {};
  rpc DeleteApp (DeleteAppRequest) returns (DeleteAppReply) {};
}

message AppDTO {
  int32 id = 1;
  string name = 2;
}

message CreateAppRequest {
  AppDTO app = 1;
}
message CreateAppReply {
  AppDTO app = 1;
}

message ListAppRequest {
  int32 app_id = 1;
  int32 offset = 2;
  int32 size = 3;
}
message ListAppReply {
  repeated AppDTO apps = 1;
  int32 total = 2;
}

message FindAppByIDRequest {
  int32 id = 1;
}
message FindAppByIDReply {
  AppDTO app = 1;
}

message DeleteAppRequest {
  int32 id = 1;
}
message DeleteAppReply {
  int32 id = 1;
}
